--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: FairPACS
+title: Face4FairShifts
 
 # Your name to show in the footer
 author: MEVIUS
@@ -100,7 +100,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "FairPACS.com"
+url-pretty: "Face4FairShifts.com"
 
 # Add the website title to the title of every page
 title-on-all-pages: true
